@@ -1,5 +1,7 @@
 Search API 1.x, dev (xxxx-xx-xx):
 ---------------------------------
+- #2951055 by bradjones1, borisson_, drunken monkey: Fixed documentation for
+  IndexInterface::addField().
 - #2945560 by mkalkbrenner, drunken monkey, borisson_: Fixed handling of
   existing highlighting data in Highlight processor.
 - #2946386 by drunken monkey, borisson_: Fixed typo in Query::getAbortMessage().
